refactor: more simple tweaks to make IDE happier